--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -33,6 +33,8 @@ h4,
   font-size font_size_l
   font-weight font_weight_bold
   margin-bottom offset_m
+  margin-top offset_m
+  padding-top 0
 
 h5
   font-size font_size_l
@@ -42,9 +44,15 @@ h6
   font-size font_size_m
   font-weight font_weight_bold
 
+.content:not(.custom) a:hover
+  text-decoration inherit
+
 p
   margin offset_s 0 offset_m 0
   line-height loosen_line_height_s
+
+.content:not(.custom)
+  padding-top 5rem
 
 .content code
   display inline-block
