Update to 0.3.2 - custom layout for home - fixes to various utility classes - improvements to documentation

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -20,7 +20,7 @@ h2,
 
 h3,
 .page .content:not(.custom) > h3
-  font-size font_size_xl
+  font-size font_size_l
   font-weight font_weight_bold
   letter-spacing extend_letter_spacing_s
   margin-bottom offset_s
