--- a/src/global.styl
+++ b/src/global.styl
@@ -134,7 +134,17 @@ offset_s = 10px
 offset_m = 20px
 offset_l = 30px
 offset_xl = 50px
-offset_xxl = 80px
+offset_2xl = 80px
+
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Widths
+|-----------------------------------------------------------------------------------------------------------------------
+*/
+widths = 30, 50, 70, 100, 150, 200, 250, 300, 400, 500
+max_widths = 30, 50, 70, 100, 150, 200, 250, 300, 400, 500
+heights = 30, 50, 70, 100
+max_heights = 30, 50, 70, 100
 
 /*
 |-----------------------------------------------------------------------------------------------------------------------
@@ -155,10 +165,10 @@ body_background = c_white
 | Usually you would want more space on larger screens and as little as possible on small ones.
 |
 */
-page_offset_s = offset_s  /* < 600px */
-page_offset_m = offset_m  /* < 900px */
-page_offset_l = offset_l  /* < 1200px */
-page_offset_x = offset_xl /* < 1500px */
+page_offset_s = offset_s
+page_offset_m = offset_m
+page_offset_l = offset_l
+page_offset_x = offset_xl
 
 /*
 |-----------------------------------------------------------------------------------------------------------------------
@@ -295,7 +305,7 @@ hr_negative = rgba(255, 255, 255, 0.4)
 | Grid
 |-----------------------------------------------------------------------------------------------------------------------
 */
-grid_separation = 2px solid light
+grid_separation = 2px solid rgba(53, 73, 94, .08)
 grid_gap_s = 5px
 grid_gap_m = 10px
 grid_gap_l = 20px
